// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check.spec test 1`] = `
{
  "_exists": true,
  "_field": [
    "dependencies",
    "devDependencies",
    "peerDependencies",
    "optionalDependencies",
  ],
  "dependencies": true,
  "devDependencies": true,
  "optionalDependencies": true,
  "peerDependencies": true,
}
`;

exports[`check.spec test 2`] = `
{
  "_exists": true,
  "_field": [
    "devDependencies",
  ],
  "dependencies": false,
  "devDependencies": true,
  "optionalDependencies": false,
  "peerDependencies": false,
}
`;
